# moto-rapido-v2

./: .gitignore  README.md
client/: middleware.tsx  package-lock.json  package.json
client/app/: layout.tsx  manifest.json  page.tsx
client/app/game/: page.tsx
client/app/games/: page.tsx
client/app/websocket/: page.tsx
client/components/: games-table.tsx
client/components/game/: lobby.tsx
client/components/ui/: badge.tsx  button.tsx
server/: CMakeLists.txt  main.cpp
server/include/: lobby.h  player.h  utils.h
server/src/: lobby.cpp  main.cpp  player.cpp  utils.cpp
